kubernetes/main/apps/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    gethomepage.dev/description: Gitops UI
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Projects
    gethomepage.dev/icon: argo-cd
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argocd-server"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: argocd.home.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - argocd.home.internal
      secretName: argocd-ing-cert
  ingressClassName: nginx
  rules:
    - host: argocd.home.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
